force-app/main/default/objects/Payouts__c/Payouts__c.object-meta.xml
<CustomObject>
    <label>Payouts</label>
    <nameField>
        <displayFormat>PAT-{000}</displayFormat>
        <label>Payouts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payouts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>