force-app/main/default/objects/Payouts__c/fields/Amount_Transferred__c.field-meta.xml
<CustomField>
    <fullName>Amount_Transferred__c</fullName>
    <label>Amount Transferred</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>