force-app/main/default/objects/Payouts__c/fields/Payout_Date__c.field-meta.xml
<CustomField>
    <fullName>Payout_Date__c</fullName>
    <label>Payout Date</label>
    <type>DateTime</type>
</CustomField>