force-app/main/default/objects/Payouts__c/fields/Payout_Mechanisms__c.field-meta.xml
<CustomField>
    <fullName>Payout_Mechanisms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payout Mechanisms</label>
    <referenceTo>Payout_Mechanisms__c</referenceTo>
    <relationshipLabel>Payouts</relationshipLabel>
    <relationshipName>Payouts</relationshipName>
    <type>Lookup</type>
</CustomField>